Use iface instead of interface in function parameters

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=66493
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>
(cherry picked from commit 0928169cf80bf767f7246ecaa52cc01e198bb15a)